--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,21 @@
 *.elc
 *~
-custom.el
-.session
-session.*
-history
-ac-comphist.dat
-bookmarks
-projectile-bookmarks.eld
+\#*
+\.#*
+/custom.el
 /graypawn-modules.el
-tramp
-recentf
-ido.last
-.#ido.last
-eshell/history
-eshell/lastdir
-auto-save-list/
-.python-environments/
-cclookup/
-elpa/
+/tramp
+/.session
+/session.*
+/history
+/ido.last
+/recentf
+/bookmarks
+/projectile-bookmarks.eld
+/ac-comphist.dat
+/eshell/history
+/eshell/lastdir
+/auto-save-list/
+/.python-environments/
+/cclookup/
+/elpa/
