--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,29 @@
-*.elc
-/modules-org/*.el
-
 *~
-\#*
-\.#*
-
-/custom.el
-/pawn-modules.el
-/srecode-map.el
-/workbench.xmi
-/kkcrc
-/tramp
-/smex-items
-/.session
-/session.*
-/projectile.cache
-/history
-/abbrev_defs
-/ido.last
-/recentf
-/bookmarks
-/projectile-bookmarks.eld
-/ac-comphist.dat
-/eshell/history
-/eshell/lastdir
-/auto-save-list/
-/.python-environments/
-/url/
-/var/
-
-/cclookup/
-/elpa/
-/semanticdb/
+*.elc
+auto-save-list
+recentf
+savehist
+saveplace
+eshell
+elpa
+el-get
+semanticdb
+url
+ede-projects.el
+.DS_Store
+custom.el
+.uptimes.el
+.historian
+places
+.smex-items
+savefile/
+snippets/
+auto-insert/
+/prelude-modules.el
+projectile-bookmarks.eld
+session*
+.cask
+tramp
+/var/pcache
+.emacs.desktop
+.emacs.desktop.lock
